@@ -3,25 +3,42 @@ AUTOMAKE_OPTIONS = foreign 1.11 subdir-objects
 
 AM_CPPFLAGS += -Iinclude $(LIBHTTP_CFLAGS)
 
-lib_LIBRARIES = \
-	libcm4all-was-simple.a \
-	libcm4all-was-apreq.a \
-	libcm4all-was-xios.a
+lib_LTLIBRARIES = \
+	libcm4all-was-simple.la \
+	libcm4all-was-apreq.la \
+	libcm4all-was-xios.la
 
-libcm4all_was_simple_a_SOURCES = \
+libcm4all_was_simple_la_SOURCES = \
 	src/iterator.c src/iterator.h \
 	src/simple.c
-libcm4all_was_simple_a_CPPFLAGS = $(AM_CPPFLAGS) \
+libcm4all_was_simple_la_CPPFLAGS = $(AM_CPPFLAGS) \
 	$(GLIB_CFLAGS)
+libcm4all_was_simple_la_LDFLAGS = \
+	$(GLIB_LIBS) \
+	-no-undefined \
+	-Wl,--version-script=$(srcdir)/libcm4all-was-simple.ld \
+	-version-info $(LIBWAS_LIBTOOL_VERSION)
 
-libcm4all_was_apreq_a_SOURCES = src/parser.c src/bucket.c
-libcm4all_was_apreq_a_CPPFLAGS = $(AM_CPPFLAGS) \
+libcm4all_was_apreq_la_SOURCES = src/parser.c src/bucket.c
+libcm4all_was_apreq_la_CPPFLAGS = $(AM_CPPFLAGS) \
 	$(LIBAPR_CFLAGS) $(LIBAPR_UTIL_CFLAGS) $(LIBAPREQ2_CFLAGS)
+libcm4all_was_apreq_la_LDFLAGS = \
+	-no-undefined \
+	$(LIBAPR_LIBS) $(LIBAPR_UTIL_LIBS) $(LIBAPREQ2_LIBS)
+	-Wl,--version-script=$(srcdir)/libcm4all-was-apreq.ld \
+	-version-info $(LIBWAS_LIBTOOL_VERSION)
+libcm4all_was_apreq_la_LIBADD = libcm4all-was-simple.la
 
-libcm4all_was_xios_a_SOURCES = src/istub.c src/ostub.c
-libcm4all_was_xios_a_CPPFLAGS = $(AM_CPPFLAGS) \
+libcm4all_was_xios_la_SOURCES = src/istub.c src/ostub.c
+libcm4all_was_xios_la_CPPFLAGS = $(AM_CPPFLAGS) \
 	$(LIBCORE_CFLAGS) \
 	$(LIBCM4ALL_INLINE_CFLAGS)
+libcm4all_was_xios_la_LDFLAGS = \
+	-no-undefined \
+	$(LIBCORE_LIBS)
+	-Wl,--version-script=$(srcdir)/libcm4all-was-xios.ld \
+	-version-info $(LIBWAS_LIBTOOL_VERSION)
+libcm4all_was_xios_la_LIBADD = libcm4all-was-simple.la
 
 wasincludedir = $(includedir)/was
 wasinclude_HEADERS = \
