@@ -14,21 +14,38 @@ Build-Depends: debhelper (>= 5), autoconf (>= 2.60), automake (>= 1.11),
 Standards-Version: 3.9.1
 Vcs-git: git@dev.intern.cm-ag:max/libwas.git
 
+Package: libcm4all-was-simple0
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: WAS server library, "simple" API
+ libwas is a support library for the Web Application Socket protocol.
+ .
+ This package contains the "simple" API.
+
 Package: libcm4all-was-dev
 Section: non-free/libdevel
 Architecture: any
 Depends: ${misc:Depends}, pkg-config (>= 0.9.0),
- libglib2.0-dev (>= 2.16),
+ libcm4all-was-simple0 (= ${binary:Version}),
  libcm4all-http-dev (>= 1.2)
 Description: Development files for libwas
  libwas is a support library for the Web Application Socket protocol.
  .
  This package contains development files.
 
+Package: libcm4all-was-apreq0
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: WAS server library, libapreq2 module
+ libwas is a support library for the Web Application Socket protocol.
+ .
+ This package contains the libapreq2 module.
+
 Package: libcm4all-was-apreq-dev
 Section: non-free/libdevel
 Architecture: any
 Depends: ${misc:Depends}, pkg-config (>= 0.9.0),
+ libcm4all-was-apreq0 (= ${binary:Version}),
  libcm4all-was-dev (= ${binary:Version}),
  libcm4all-thirdparty-apreq2-dev
 Description: Development files for libwas/apreq2
@@ -36,10 +53,19 @@ Description: Development files for libwas/apreq2
  .
  This package contains development files for the libapreq2 module.
 
+Package: libcm4all-was-xios0
+Architecture: any
+Depends: ${misc:Depends}, ${shlibs:Depends}
+Description: WAS server library, xios implementation
+ libwas is a support library for the Web Application Socket protocol.
+ .
+ This package contains the libcm4all-core xios implementation.
+
 Package: libcm4all-was-xios-dev
 Section: non-free/libdevel
 Architecture: any
 Depends: ${misc:Depends}, pkg-config (>= 0.9.0),
+ libcm4all-was-xios0 (= ${binary:Version}),
  libcm4all-was-dev (= ${binary:Version}),
  libcm4all-core-dev (>= 1.20.5)
 Description: Development files for libwas/xios
