@@ -1,3 +1,3 @@
 usr/include/cm4all/libwas-0/was/{protocol,simple}.h
-usr/lib/libcm4all-was-simple.a
+usr/lib/libcm4all-was-simple.so
 usr/lib/pkgconfig/libcm4all-was-simple.pc
