@@ -1,0 +1,1 @@
+usr/lib/libcm4all-was-simple.so.*
