@@ -1,0 +1,1 @@
+libcm4all-was-simple 0 libcm4all-was-simple0 (= ${binary:Version})
