@@ -1,0 +1,7 @@
+libcm4all_was_apreq_0 {
+        global:
+		apreq_handle_was;
+
+        local:
+                *;
+};
