@@ -1,0 +1,8 @@
+libcm4all_was_xios_0 {
+        global:
+		xios_was_input_create;
+		xios_was_output_create;
+
+        local:
+                *;
+};
