@@ -1,0 +1,2 @@
+/lt*.m4
+/libtool.m4
